# vastai-auto-launcher

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: train.yml
configs/: config.yaml
scripts/: entrypoint.sh  fit.sh  launch.sh  local_vastai.sh  vastai_launcher.py
src/nets/: __init__.py
src/utils/: vis.py
